--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="container">
+  <% flash.each do |key,value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
+</div>
+<%= render 'layouts/header' %>
 <%= yield %>
-
+<div class="container">
+  <%= render 'layouts/footer'%>
+</div>
 </body>
 </html>
